criando pagina de contato

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Meus jogos</title>
 </head>
 <body>
-    <h1>sistema de cadastro de jogos/h1>
+    <h1>sistema de cadastro de jogos</h1>
     <script src="app.js"></script>
 </body>
 </html>
